fixing visual bugs on iphone

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .heroButton {
-        @apply bg-[#0B0F19] px-5 py-3 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
+        @apply bg-[#0B0F19] px-2 sm:px-5 py-3 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
     }
 
     .contactInput {
